<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/extradarkblue">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:padding="50dp">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/info1"/>
        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textWebEmailAddress"
            android:hint="@string/email_name_field"/>
        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textWebPassword"
            android:hint="@string/password_field"/>
        <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="@color/colorAccent"
            android:gravity="center_horizontal"
            android:text="@string/error_text"
            android:textColor="@color/error_red"
            android:visibility="invisible"
            android:maxLines="1"
            android:onClick="onRegister"/>
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"

            android:text="@string/login"/>
        <ProgressBar
            android:id="@+id/loading_icon"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyle"
            android:padding="5dp"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="@color/colorAccent"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:onClick="onRegister"/>
    </LinearLayout>
</ScrollView>